[gd_scene load_steps=7 format=3 uid="uid://cieyh0w75vcq7"]

[ext_resource type="Script" path="res://src/ui/store/store_panel.gd" id="1_h8rdo"]
[ext_resource type="PackedScene" uid="uid://dyrf50yc61ric" path="res://src/ui/store/panel/option/store_option.tscn" id="2_pla2b"]
[ext_resource type="Resource" uid="uid://c2dd4g83h820w" path="res://src/game/store/pools/level_1.tres" id="3_3y7ey"]
[ext_resource type="FontFile" uid="uid://jd478um6wqpv" path="res://assets/fonts/Gameplay.ttf" id="6_1es1n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adfe4"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_0v5at"]

[node name="StorePanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_right = 141.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_adfe4")
script = ExtResource("1_h8rdo")
current_pool = ExtResource("3_3y7ey")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_0v5at")
theme_override_constants/separation = 10

[node name="StoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_1es1n")
theme_override_font_sizes/font_size = 20
text = "STORE"

[node name="StoreOption1" parent="VBoxContainer" instance=ExtResource("2_pla2b")]
layout_mode = 2

[node name="StoreOption2" parent="VBoxContainer" instance=ExtResource("2_pla2b")]
layout_mode = 2

[node name="StoreOption3" parent="VBoxContainer" instance=ExtResource("2_pla2b")]
layout_mode = 2

[node name="StoreOption4" parent="VBoxContainer" instance=ExtResource("2_pla2b")]
layout_mode = 2

[node name="RollButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("6_1es1n")
theme_override_font_sizes/font_size = 23
text = "Roll"

[connection signal="pressed" from="VBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
